--- a/app/src/main/res/layout/activity_cadastro_aluno.xml
+++ b/app/src/main/res/layout/activity_cadastro_aluno.xml
@@ -94,5 +94,16 @@
         app:layout_constraintEnd_toEndOf="@+id/rbarNota"
         app:layout_constraintStart_toStartOf="@+id/rbarNota"
         app:layout_constraintTop_toBottomOf="@+id/rbarNota" />
+
+    <Button
+        android:id="@+id/btnExcluir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/btn_excluir"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="@+id/btnCadastrarAluno"
+        app:layout_constraintStart_toStartOf="@+id/btnCadastrarAluno"
+        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarAluno" />
 </android.support.constraint.ConstraintLayout>
 </ScrollView>
